--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/febry.jpg" alt="Image"/></a></div>
           <div class="h2 title">Febry Ramadhan Hardiansyah</div>
-          <p class="category text-white">Gamer Enthusiast, Lego Addict, Photographer</p>
+          <p class="category text-white">Gaming Enthusiast, Lego Addict, Photographer</p>
         </div>
       </div>
       <div class="section">
@@ -61,7 +61,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Febry Ramadhan. Gamer Enthusiast, Lego Addict and Photographer.</p>
+            <p>Hello! I am Febry Ramadhan. Gaming Enthusiast, Lego Addict and Photographer.</p>
             <p>I am a self-motivated and enthusiast person, a solid individual worker as well as quite good team worker. I have passion in technology, video game and photograph. <a href="https://thetourneyoffebryrh.blogspot.com/" target="_blank">Learn More</a></p>
           </div>
         </div>
